unnest list and link spacing add __flush for advanced search link to match alignment

--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -114,7 +114,9 @@
 			</div>
 		</form>
 
-		<a class="c-header__link" href="/search/advanced">Advanced search</a>
+		<div class="c-header__flush">
+			<a class="c-header__link" href="/search/advanced">Advanced search</a>
+		</div>
 
 		<h3 class="c-header__heading c-header__heading--keyline">Quick links</h3>
 		<ul class="c-header__list c-header__list--inline">
