--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -182,6 +182,12 @@
 	@include u-list-reset;
 	display: flex;
 	flex-wrap: wrap;
+	gap: 0 spacing(16);
+	margin: 0 (0 - spacing(8)); // Make flush with edge
+}
+
+.c-header__flush {
+	margin: 0 (0 - spacing(8)); // Make flush with edge
 }
 
 .c-header__visually-hidden {
@@ -252,9 +258,8 @@
 		flex-direction: column;
 	}
 
-	.c-header__link {
-		margin: 0;
-		padding: spacing(8) 0;
+	.c-header__list--inline {
+		flex-direction: row;
 	}
 
 	.c-header__item--keyline {
@@ -272,11 +277,6 @@
 	width: 100%;
 	padding: spacing(32) 0 spacing(24);
 	transform: none;
-
-	.c-header__list {
-		flex-direction: row;
-		gap: 0 spacing(16);
-	}
 }
 
 .c-header__search-form {
