simplify the keyline class in list
- split list where keyline class is required

--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -258,18 +258,12 @@
 		flex-direction: column;
 	}
 
-	.c-header__list--inline {
-		flex-direction: row;
-	}
-
-	.c-header__item--keyline {
+	.c-header__list + .c-header__list .c-header__item:first-child {
 		@include u-keyline($direction: top, $spacing: spacing(8));
 	}
 
-	.c-header__item--keyline-first-item-only ~ .c-header__item--keyline-first-item-only {
-		border-top: none;
-		padding-top: 0;
-		margin-top: 0;
+	.c-header__list--inline {
+		flex-direction: row;
 	}
 }
 
