--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -137,30 +137,32 @@
 					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
 				</li>
 			{{/each}}
+		</ul>
+		<ul class="c-header__list">
 			{{#if facebookUri}}
-				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}}">
+				<li class="c-header__item">
 					<a class="c-header__link" href="{{facebookUri}}">Follow us on Facebook</a>
 				</li>
 			{{/if}}
 			{{#if twitterUri}}
-				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}}">
+				<li class="c-header__item">
 					<a class="c-header__link" href="{{twitterUri}}">Follow us on Twitter</a>
 				</li>
 			{{/if}}
 			{{#if showSubscribeButton}}
-				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} c-header__item--hide-lg">
+				<li class="c-header__item c-header__item--hide-lg">
 					<a class="c-header__link" href="https://www.nature.com/{{pcode}}/subscribe"><span>Subscribe</span></a>
 				</li>
 			{{/if}}
 			{{#if alertsLink}}
-				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} c-header__item--hide-lg">
+				<li class="c-header__item c-header__item--hide-lg">
 					<a class="c-header__link" href="{{alertsLink}}" rel="nofollow">Sign up for alerts<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
 						<path d="m4 10h2.5c.27614237 0 .5.2238576.5.5s-.22385763.5-.5.5h-3.08578644l-1.12132034 1.1213203c-.18753638.1875364-.29289322.4418903-.29289322.7071068v.1715729h14v-.1715729c0-.2652165-.1053568-.5195704-.2928932-.7071068l-1.7071068-1.7071067v-3.4142136c0-2.76142375-2.2385763-5-5-5-2.76142375 0-5 2.23857625-5 5zm3 4c0 1.1045695.8954305 2 2 2s2-.8954305 2-2zm-5 0c-.55228475 0-1-.4477153-1-1v-.1715729c0-.530433.21071368-1.0391408.58578644-1.4142135l1.41421356-1.4142136v-3c0-3.3137085 2.6862915-6 6-6s6 2.6862915 6 6v3l1.4142136 1.4142136c.3750727.3750727.5857864.8837805.5857864 1.4142135v.1715729c0 .5522847-.4477153 1-1 1h-4c0 1.6568542-1.3431458 3-3 3-1.65685425 0-3-1.3431458-3-3z" fill="#fff" />
 					</svg></a>
 				</li>
 			{{/if}}
 			{{#if rssLink}}
-				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} c-header__item--hide-lg">
+				<li class="c-header__item c-header__item--hide-lg">
 					<a class="c-header__link" href="{{rssLink}}"><span>RSS feed</span></a>
 				</li>
 			{{/if}}
@@ -190,8 +192,10 @@
 					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
 				</li>
 			{{/each}}
+		</ul>
+		<ul class="c-header__list">
 			{{#if submissionLink}}
-				<li class="c-header__item{{#if publishWithUs}} c-header__item--keyline{{/if}}">
+				<li class="c-header__item">
 					<a class="c-header__link" href="{{submissionLink}}">Submit manuscript<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
 						<path d="m15 0c1.1045695 0 2 .8954305 2 2v5.5c0 .27614237-.2238576.5-.5.5s-.5-.22385763-.5-.5v-5.5c0-.51283584-.3860402-.93550716-.8833789-.99327227l-.1166211-.00672773h-9v3c0 1.1045695-.8954305 2-2 2h-3v10c0 .5128358.38604019.9355072.88337887.9932723l.11662113.0067277h7.5c.27614237 0 .5.2238576.5.5s-.22385763.5-.5.5h-7.5c-1.1045695 0-2-.8954305-2-2v-10.17157288c0-.53043297.21071368-1.0391408.58578644-1.41421356l3.82842712-3.82842712c.37507276-.37507276.88378059-.58578644 1.41421356-.58578644zm-.5442863 8.18867991 3.3545404 3.35454039c.2508994.2508994.2538696.6596433.0035959.909917-.2429543.2429542-.6561449.2462671-.9065387-.0089489l-2.2609825-2.3045251.0010427 7.2231989c0 .3569916-.2898381.6371378-.6473715.6371378-.3470771 0-.6473715-.2852563-.6473715-.6371378l-.0010428-7.2231995-2.2611222 2.3046654c-.2531661.2580415-.6562868.2592444-.9065605.0089707-.24295423-.2429542-.24865597-.6576651.0036132-.9099343l3.3546673-3.35466731c.2509089-.25090888.6612706-.25227691.9135302-.00001728zm-.9557137-3.18867991c.2761424 0 .5.22385763.5.5s-.2238576.5-.5.5h-6c-.27614237 0-.5-.22385763-.5-.5s.22385763-.5.5-.5zm-8.5-3.587-3.587 3.587h2.587c.55228475 0 1-.44771525 1-1zm8.5 1.587c.2761424 0 .5.22385763.5.5s-.2238576.5-.5.5h-6c-.27614237 0-.5-.22385763-.5-.5s.22385763-.5.5-.5z" fill="#fff" />
 					</svg>
