--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -37,6 +37,12 @@
 	max-width: $global-forms-input-width-maximum;
 }
 
+.c-forms__fieldset--pictographic-radios {
+	display: flex;
+	flex-direction: row;
+	gap: 16px;
+}
+
 * + .c-forms__error-summary,
 * + .c-forms__fieldset,
 * + .c-forms__field {
@@ -130,7 +136,8 @@ label+.c-forms__error,
 }
 
 .c-forms__input--radio,
-.c-forms__input--checkbox {
+.c-forms__input--checkbox,
+.c-form__label--visually-hidden-text span {
 	/* hide visually, not to assistive tech */
 	clip-path: inset(50%);
 	height: 1px;
@@ -159,6 +166,40 @@ label+.c-forms__error,
 	background-color: $global-forms-input-background-color;
 	border: #{calc($global-forms-input-border-width)} solid;
 	margin-right: $global-forms-checkbox-spacing;
+}
+
+.c-forms__label--pictographic-radio {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	gap: spacing(8);
+	font-weight: 400;
+	cursor: pointer;
+}
+
+.c-forms__label--pictographic-radio svg {
+	box-sizing: content-box;
+	flex: 0 0 auto;
+	width: 60px;
+	height: 60px;
+	padding: 8px;
+	fill: #000;
+	border: 1px solid #000;
+}
+
+:checked+.c-forms__label--pictographic-radio svg {
+	background-color: #000;
+	border-color: #000;
+}
+
+:checked+.c-forms__label--pictographic-radio svg {
+	fill: #fff;
+}
+
+:focus+.c-forms__label--pictographic-radio svg,
+.c-forms__label--pictographic-radio:hover svg {
+	box-shadow: 0 0 0 3px $global-forms-input-focus-outline-color;
 }
 
 :checked+.c-forms__label--inline::before {
