--- a/toolkits/global/packages/global-forms/view/fields/globalFormRadio.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormRadio.hbs
@@ -1,6 +1,13 @@
 <div class="c-forms__label c-forms__label--wrapper">
 	<input class="c-forms__input c-forms__input--radio" type="radio" {{> globalFormAttributes}}>
-	<label for="{{id}}" class="c-forms__label c-forms__label--inline c-forms__label--radio">{{label}}</label>
+	{{#if pictographic}}
+		<label for="{{id}}" class="c-forms__label c-forms__label--pictographic-radio{{#unless showLabel}} c-form__label--visually-hidden-text{{/unless}}">
+			{{{svg}}}
+			<span>{{label}}</span>
+		</label>
+	{{else}}
+		<label for="{{id}}" class="c-forms__label c-forms__label--inline c-forms__label--radio">{{label}}</label>
+	{{/if}}
 	{{#if fields}}
 		<fieldset class="c-forms__fieldset c-forms__sub-fields">
 			{{#each fields}}
