--- a/context/brand-context/default/scss/00-tokens/_ui.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_ui.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Fri, 01 Jul 2022 16:01:55 GMT
+// Generated on Wed, 24 Aug 2022 13:01:42 GMT
 
 $tokens--ui-font-size: 1rem;
-$tokens--ui-focus-outline-color: #025e8d;
+$tokens--ui-focus-outline-color: #0088cc;
 $tokens--ui-content-width: 70ch;
