--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,11 +1,13 @@
-// Generated on 01/07/2022, 17:01:55
+// Generated on 24/08/2022, 14:01:42
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
+$global-forms-checkbox-border-color: #999999;
+$global-forms-checkbox-border-size: 2px;
 $global-forms-checkbox-checked-icon-data-uri: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="3" stroke="white" stroke-linejoin="round" fill="none" stroke-linecap="round" viewBox="0 0 20 20"><path d="M4.5,11 10,15 16,5"></path></svg>';
 $global-forms-checkbox-checked-icon-fill: #01324b;
 $global-forms-checkbox-checked-icon-stroke: #01324b;
-$global-forms-checkbox-size: 1rem;
+$global-forms-checkbox-size: 1.5rem;
 $global-forms-checkbox-spacing: .5rem;
 $global-forms-field-stack-spacing: 1.5rem;
 $global-forms-hint-color: #666666;
@@ -17,7 +19,7 @@ $global-forms-input-border-color-disabled: #dadada;
 $global-forms-input-border-color-error: #c40606;
 $global-forms-input-border-color-resting: #222222;
 $global-forms-input-border-width: 1px;
-$global-forms-input-focus-outline-color: #025e8d;
+$global-forms-input-focus-outline-color: #0088cc;
 $global-forms-input-font-color: #000000;
 $global-forms-input-font-size: 1rem;
 $global-forms-input-font-weight: 400;
