--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -149,6 +149,7 @@ label+.c-forms__error,
 	display: flex;
 	align-items: start;
 	cursor: pointer;
+	padding: 0;
 }
 
 .c-forms__label--inline::before {
@@ -157,12 +158,14 @@ label+.c-forms__error,
 	width: $global-forms-checkbox-size;
 	height: $global-forms-checkbox-size;
 	background-color: $global-forms-input-background-color;
-	border: #{calc($global-forms-input-border-width)} solid;
+	border: #{calc($global-forms-checkbox-border-size)} solid $global-forms-checkbox-border-color;
 	margin-right: $global-forms-checkbox-spacing;
+	position: relative;
+	top: calc(#{$global-forms-checkbox-size} / 16);
 }
 
 :checked+.c-forms__label--inline::before {
-	border-color: $global-forms-input-border-color-resting;
+	border-color: $global-forms-checkbox-checked-icon-stroke;
 }
 
 :focus+.c-forms__label--inline::before {
@@ -196,7 +199,7 @@ label+.c-forms__error,
 
 .c-forms__sub-fields {
 	margin-top: $global-forms-input-stack-spacing;
-	margin-left: calc(#{$global-forms-checkbox-size} / 3);
+	margin-left: calc(#{$global-forms-checkbox-size} / 4);
 	padding-top: $global-forms-field-stack-spacing;
 	padding-left: $global-forms-field-stack-spacing;
 	position: relative;
@@ -259,4 +262,10 @@ label+.c-forms__error,
 	display: flex;
 	flex-wrap: wrap;
 	gap: 0.5rem;
+}
+
+/* Hides type="hidden" and discourages lack of
+labels elsewhere */
+.c-forms__field--no-label {
+	display: none;
 }
