coordinated form and status message updates

--- a/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
+++ b/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
@@ -32,6 +32,14 @@
 	margin-right: $status-message--gutter-icon;
 }
 
+.c-status-message__message :first-child {
+	margin-top: 0;
+}
+
+.c-status-message__message :last-child {
+	margin-top: 0;
+}
+
 .c-status-message__icon--top {
 	align-self: flex-start;
 }
