added success icon, multiple demo types, history

--- a/toolkits/global/packages/global-status-message/demo/index.hbs
+++ b/toolkits/global/packages/global-status-message/demo/index.hbs
@@ -1,3 +1,15 @@
 {{#with warning}}
 	{{> globalStatusMessage}}
 {{/with}}
+<br/>
+{{#with error}}
+	{{> globalStatusMessage}}
+{{/with}}
+<br/>
+{{#with success}}
+	{{> globalStatusMessage}}
+{{/with}}
+<br/>
+{{#with info}}
+	{{> globalStatusMessage}}
+{{/with}}
