--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -119,7 +119,7 @@
 		</div>
 
 		<h3 class="c-header__heading c-header__heading--keyline">Quick links</h3>
-		<ul class="c-header__list c-header__list--inline">
+		<ul class="c-header__list c-header__list--js-inline">
 			<li><a class="c-header__link" href="/subjects">Explore articles by subject</a></li>
 			<li><a class="c-header__link" href="/naturecareers">Find a job</a></li>
 			<li><a class="c-header__link" href="/authors/index.html">Guide to authors</a></li>
@@ -130,15 +130,15 @@
 
 <nav class="c-header__dropdown" aria-labelledby="Explore-content" id="explore">
 	<div class="c-header__container">
-		<h2 id="Explore-content" class="c-header__heading c-header__heading--hide">Explore content</h2>
-		<ul class="c-header__list">
+		<h2 id="Explore-content" class="c-header__heading c-header__heading--js-hide">Explore content</h2>
+		<ul class="c-header__list c-header__list--js-stack">
 			{{#each exploreContent as |siteNavItem|}}
 				<li class="c-header__item">
 					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
 				</li>
 			{{/each}}
 		</ul>
-		<ul class="c-header__list">
+		<ul class="c-header__list c-header__list--js-stack">
 			{{#if facebookUri}}
 				<li class="c-header__item">
 					<a class="c-header__link" href="{{facebookUri}}">Follow us on Facebook</a>
@@ -172,8 +172,8 @@
 
 <nav class="c-header__dropdown" aria-labelledby="About-the-journal" id="about-the-journal">
 	<div class="c-header__container">
-		<h2 id="About-the-journal" class="c-header__heading c-header__heading--hide">About the journal</h2>
-		<ul class="c-header__list">
+		<h2 id="About-the-journal" class="c-header__heading c-header__heading--js-hide">About the journal</h2>
+		<ul class="c-header__list c-header__list--js-stack">
 			{{#each aboutJournalContent as |siteNavItem|}}
 				<li class="c-header__item">
 					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
@@ -185,15 +185,15 @@
 
 <nav class="c-header__dropdown" aria-labelledby="Publish-with-us-label" id="publish-with-us">
 	<div class="c-header__container">
-		<h2 id="Publish-with-us-label" class="c-header__heading c-header__heading--hide">Publish with us</h2>
-		<ul class="c-header__list">
+		<h2 id="Publish-with-us-label" class="c-header__heading c-header__heading--js-hide">Publish with us</h2>
+		<ul class="c-header__list c-header__list--js-stack">
 			{{#each publishWithUsContent as |siteNavItem|}}
 				<li class="c-header__item">
 					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
 				</li>
 			{{/each}}
 		</ul>
-		<ul class="c-header__list">
+		<ul class="c-header__list c-header__list--js-stack">
 			{{#if submissionLink}}
 				<li class="c-header__item">
 					<a class="c-header__link" href="{{submissionLink}}">Submit manuscript<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
