Revert "Forms rc.6 (#794)"
This reverts commit 9ad3f558651421e429604f4291e5bbc300326fc4.

--- a/context/brand-context/default/scss/00-tokens/_ui.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_ui.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Wed, 31 Aug 2022 12:15:43 GMT
+// Generated on Fri, 01 Jul 2022 16:01:55 GMT
 
 $tokens--ui-font-size: 1rem;
-$tokens--ui-focus-outline-color: #0088cc;
+$tokens--ui-focus-outline-color: #025e8d;
 $tokens--ui-content-width: 70ch;
