--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -73,7 +73,7 @@
 
 .c-header__menu--journal {
 	font-size: .875rem;
-	margin: spacing(8) (0 - spacing(8)); // Make flush with edge
+	margin: spacing(8) spacing(8) spacing(8) (0 - spacing(8));
 
 	@include media-query('sm') {
 		flex-wrap: nowrap;
@@ -85,12 +85,25 @@
 }
 
 .c-header__item {
-	display: flex;
+	position: static;
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .c-header__item--pipe {
 	border-left: 2px solid greyscale(80);
 	padding-left: spacing(8);
+}
+
+.c-header__item--padding {
+	padding-top: spacing(8);
+	padding-bottom: spacing(8);
+}
+
+.c-header__item--dropdown-menu {
+	@include media-query('sm') {
+		position: relative;
+	}
 }
 
 .c-header__item--hide-lg {
@@ -108,17 +121,6 @@
 .c-header__item--hide-md-max {
 	@include media-query('md', 'max') {
 		@include u-hide;
-	}
-}
-
-.c-header__item--padding {
-	padding-top: spacing(8);
-	padding-bottom: spacing(8);
-}
-
-.c-header__item--dropdown-menu {
-	@include media-query('sm') {
-		position: relative;
 	}
 }
 
@@ -332,10 +334,6 @@
 
 	.c-header__list--js-stack {
 		flex-direction: column;
-	}
-
-	.c-header__list--js-inline {
-		flex-direction: row;
 	}
 
 	.c-header__item--keyline,
