Removes title attribute from SVG elements and adds imageDescription

--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -137,7 +137,7 @@ label+.c-forms__error,
 
 .c-forms__input--radio,
 .c-forms__input--checkbox,
-.c-form__label--visually-hidden-text span {
+.c-form__label--visually-hidden {
 	/* hide visually, not to assistive tech */
 	clip-path: inset(50%);
 	height: 1px;
