--- a/toolkits/global/packages/global-forms/demo/main.scss
+++ b/toolkits/global/packages/global-forms/demo/main.scss
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-@import '../node_modules/context/brand-context/default/scss/core.scss';
-@import '../node_modules/context/brand-context/default/scss/enhanced.scss';
-@import '../node_modules/context/brand-context/default/scss/60-utilities/spacing.scss';
-@import '../node_modules/context/brand-context/default/scss/60-utilities/buttons.scss';
+@import '../node_modules/@springernature/brand-context/springernature/scss/core.scss';
+@import '../node_modules/@springernature/brand-context/springernature/scss/enhanced.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/spacing.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/buttons.scss';
 
 // component SCSS
-//@import '../scss/00-tokens/default.tokens.scss';
+@import '../scss/00-tokens/default.tokens.scss';
 @import '../scss/50-components/forms';
