--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -153,7 +153,7 @@ label+.c-forms__error,
 
 .c-forms__label--inline {
 	display: flex;
-	align-items: start;
+	align-items: center;
 	cursor: pointer;
 	padding: 0;
 }
@@ -166,8 +166,6 @@ label+.c-forms__error,
 	background-color: $global-forms-input-background-color;
 	border: #{calc($global-forms-checkbox-border-size)} solid $global-forms-checkbox-border-color;
 	margin-right: $global-forms-checkbox-spacing;
-	position: relative;
-	top: calc(#{$global-forms-checkbox-size} / 16);
 }
 
 :checked+.c-forms__label--inline::before {
