Implements design tokens for pictographic radio styling

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 31/08/2022, 13:15:43
+// Generated on 9/9/2022, 2:05:49 PM
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -30,7 +30,16 @@ $global-forms-input-width-maximum: 70ch;
 $global-forms-label-color: #000000;
 $global-forms-label-font-size: 1rem;
 $global-forms-label-font-weight: 700;
+$global-forms-label-inline-font-weight: 400;
 $global-forms-message-color-error: #c40606;
 $global-forms-message-icon-color-error: #c40606;
 $global-forms-message-icon-color-resting: #000000;
 $global-forms-message-icon-size: 1rem;
+$global-forms-pictographic-radio-icon-color-background-checked: #ffffff;
+$global-forms-pictographic-radio-icon-color-background-unchecked: #000000;
+$global-forms-pictographic-radio-icon-color-border-checked: #ffffff;
+$global-forms-pictographic-radio-icon-color-border-unchecked: #000000;
+$global-forms-pictographic-radio-icon-color-fill-checked: #ffffff;
+$global-forms-pictographic-radio-icon-color-fill-unchecked: #000000;
+$global-forms-pictographic-radio-icon-size: 4rem;
+$global-forms-pictographic-radio-spacing: 1rem;
