Implements boxed setting for controlling padding and border of pictographic radio icons

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 9/9/2022, 2:05:49 PM
+// Generated on 9/12/2022, 10:05:16 AM
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -35,8 +35,8 @@ $global-forms-message-color-error: #c40606;
 $global-forms-message-icon-color-error: #c40606;
 $global-forms-message-icon-color-resting: #000000;
 $global-forms-message-icon-size: 1rem;
-$global-forms-pictographic-radio-icon-color-background-checked: #ffffff;
-$global-forms-pictographic-radio-icon-color-background-unchecked: #000000;
+$global-forms-pictographic-radio-icon-color-background-checked: #000000;
+$global-forms-pictographic-radio-icon-color-background-unchecked: #ffffff;
 $global-forms-pictographic-radio-icon-color-border-checked: #ffffff;
 $global-forms-pictographic-radio-icon-color-border-unchecked: #000000;
 $global-forms-pictographic-radio-icon-color-fill-checked: #ffffff;
