--- a/toolkits/global/packages/global-forms/view/fields/globalFormRadios.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormRadios.hbs
@@ -12,7 +12,7 @@
 		{{/if}}
 
 		{{#each inputs}}
-			{{> globalFormRadio name=../name pictographic=../pictographic}}
+			{{> globalFormRadio name=../name pictographic=../pictographic boxed=../boxed}}
 		{{/each}}
 	</fieldset>
 {{/if}}
