--- a/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 31/08/2022, 13:15:43
+// Generated on 9/12/2022, 10:05:16 AM
 // Source: design-tokens/componenets/springer/global-forms/springer.json
 // DO NOT edit directly
 
