--- a/toolkits/global/packages/global-forms/view/fields/globalFormRadio.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormRadio.hbs
@@ -1,7 +1,7 @@
 <div class="c-forms__label c-forms__label--wrapper">
 	<input class="c-forms__input c-forms__input--radio" type="radio" {{> globalFormAttributes}}>
 	{{#if pictographic}}
-		<label for="{{id}}" class="c-forms__label c-forms__label--pictographic-radio">
+		<label for="{{id}}" class="c-forms__label c-forms__label--pictographic-radio{{#if boxed}} c-forms__label--boxed-icon{{/if}}">
 			{{{svg}}}
 			<span class="c-form__label--visually-hidden">{{imageDescription}}</span>
 			<span {{#unless showLabel}}class="c-form__label--visually-hidden"{{/unless}}><span class="c-form__label--visually-hidden"> The value of this radio input is: </span>{{label}}</span>
