Updates SVG colors to match checked colours used in the pseudo element styles for radios checkboxes

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 9/12/2022, 10:05:16 AM
+// Generated on 9/13/2022, 10:37:53 AM
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -30,17 +30,17 @@ $global-forms-input-width-maximum: 70ch;
 $global-forms-label-color: #000000;
 $global-forms-label-font-size: 1rem;
 $global-forms-label-font-weight: 700;
-$global-forms-line-height: 1.4;
 $global-forms-label-inline-font-weight: 400;
+$global-forms-line-height: 1.4;
 $global-forms-message-color-error: #c40606;
 $global-forms-message-icon-color-error: #c40606;
 $global-forms-message-icon-color-resting: #000000;
 $global-forms-message-icon-size: 1rem;
-$global-forms-pictographic-radio-icon-color-background-checked: #000000;
+$global-forms-pictographic-radio-icon-color-background-checked: #01324b;
 $global-forms-pictographic-radio-icon-color-background-unchecked: #ffffff;
 $global-forms-pictographic-radio-icon-color-border-checked: #ffffff;
-$global-forms-pictographic-radio-icon-color-border-unchecked: #000000;
+$global-forms-pictographic-radio-icon-color-border-unchecked: #01324b;
 $global-forms-pictographic-radio-icon-color-fill-checked: #ffffff;
-$global-forms-pictographic-radio-icon-color-fill-unchecked: #000000;
+$global-forms-pictographic-radio-icon-color-fill-unchecked: #01324b;
 $global-forms-pictographic-radio-icon-size: 4rem;
 $global-forms-pictographic-radio-spacing: 1rem;
