Sets a sensible default width and height for aria-hidden inline SVGs in the core styles to reduce the core experience looking broken

--- a/context/brand-context/nature/scss/40-base/basic.scss
+++ b/context/brand-context/nature/scss/40-base/basic.scss
@@ -52,6 +52,11 @@ img {
 	vertical-align: middle;
 }
 
+svg[aria-hidden] {
+	width: 1rem;
+	height: 1rem;
+}
+
 button {
 	font-family: $context--font-family-sans;
 	border-radius: 0;
