--- a/context/brand-context/springer/scss/40-base/basic.scss
+++ b/context/brand-context/springer/scss/40-base/basic.scss
@@ -57,7 +57,13 @@ img {
 	vertical-align: middle;
 }
 
+svg[aria-hidden] {
+	width: 1rem;
+	height: 1rem;
+}
+
 button {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 	border-radius: 0;
 }
+
