--- a/context/brand-context/springer/scss/core.scss
+++ b/context/brand-context/springer/scss/core.scss
@@ -12,4 +12,5 @@
 
 // 40-base
 @import '../../default/scss/40-base/normalize';
+@import '../../default/scss/40-base/basic';
 @import "40-base/basic";
