--- a/context/brand-context/default/scss/00-tokens/_typography.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_typography.variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 09 Sep 2022 10:53:10 GMT
+// Generated on Wed, 14 Sep 2022 12:56:56 GMT
 
 $tokens--typography-heading-font-family: serif;
 $tokens--typography-heading-letter-spacing: 0.2rem;
@@ -20,3 +20,7 @@ $tokens--typography-heading-level-4-font-weight: 700;
 $tokens--typography-heading-level-5-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 $tokens--typography-heading-level-5-font-size: 1.125rem;
 $tokens--typography-heading-level-5-font-weight: 700;
+$tokens--typography-block-spacing-small: .5rem;
+$tokens--typography-block-spacing-medium: 1rem;
+$tokens--typography-block-spacing-large: 2rem;
+$tokens--typography-block-spacing-x-large: 3rem;
