--- a/context/brand-context/nature/scss/enhanced.scss
+++ b/context/brand-context/nature/scss/enhanced.scss
@@ -17,3 +17,4 @@
 @import '40-base/tables';
 @import '../../default/scss/40-base/typography';
 @import '40-base/typography';
+@import '../../default/scss/40-base/block-spacing';
