--- a/context/brand-context/springer/scss/enhanced.scss
+++ b/context/brand-context/springer/scss/enhanced.scss
@@ -14,3 +14,4 @@
 @import '40-base/links';
 @import '40-base/tables';
 @import '40-base/typography';
+@import '../../default/scss/40-base/block-spacing';
