--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 9/13/2022, 10:47:53 AM
+// Generated on 9/15/2022, 5:26:37 PM
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -38,9 +38,11 @@ $global-forms-message-icon-color-resting: #000000;
 $global-forms-message-icon-size: 1rem;
 $global-forms-pictographic-radio-checked-icon-background: #01324b;
 $global-forms-pictographic-radio-checked-icon-border: #ffffff;
-$global-forms-pictographic-radio-checked-icon-fill: #ffffff;
+$global-forms-pictographic-radio-checked-icon-fill: #01324b;
+$global-forms-pictographic-radio-checked-icon-stroke: #ffffff;
 $global-forms-pictographic-radio-icon-size: 4rem;
 $global-forms-pictographic-radio-spacing: 1rem;
 $global-forms-pictographic-radio-unchecked-icon-background: #ffffff;
 $global-forms-pictographic-radio-unchecked-icon-border: #01324b;
-$global-forms-pictographic-radio-unchecked-icon-fill: #01324b;
+$global-forms-pictographic-radio-unchecked-icon-fill: #ffffff;
+$global-forms-pictographic-radio-unchecked-icon-stroke: #01324b;
