removed erroneous Nature label padding

--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -99,6 +99,7 @@
 	font-size: $global-forms-label-font-size;
 	font-weight: $global-forms-label-font-weight;
 	color: $global-forms-label-color;
+	padding: 0;
 }
 
 .c-forms__label + .c-forms__label {
