--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -22,7 +22,7 @@
 	line-height: $global-forms-line-height;
 }
 
-.c-forms__fieldset,
+.c-forms__field,
 .c-forms__error-summary {
 	font-size: $global-forms-input-font-size;
 }
@@ -38,8 +38,8 @@
 }
 
 .c-forms__error-summary,
-.c-forms__fieldset,
-.c-forms__input-container {
+.c-forms__input-container,
+.c-forms__field {
 	max-width: $global-forms-input-width-maximum;
 }
 
@@ -327,10 +327,4 @@ label+.c-forms__error,
 	display: flex;
 	flex-wrap: wrap;
 	gap: 0.5rem;
-}
-
-/* Hides type="hidden" and discourages lack of
-labels elsewhere */
-.c-forms__field--no-label {
-	display: none;
 }
