add z-index to springernature settings

--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_springernature.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_springernature.scss
@@ -11,3 +11,4 @@ $skip-link--font-size: 1rem;
 $skip-link--color: color('white');
 $skip-link--hover-color: color('white');
 $skip-link--background-color: color('universal-blue');
+$skip-link--z-index: 9999;
