Regens demo file

--- a/toolkits/global/packages/global-ratings-survey/demo/main.scss
+++ b/toolkits/global/packages/global-ratings-survey/demo/main.scss
@@ -9,5 +9,5 @@
 @import '../node_modules/@springernature/global-forms/scss/50-components/forms';
 
 // Component SCSS
-//@import '../scss/00-tokens/default.tokens.scss';
+@import '../scss/00-tokens/default.tokens.scss';
 @import '../scss/50-components/ratings-survey';
