Enforces the setting of a unique id for the component instance

--- a/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
+++ b/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
@@ -1,4 +1,4 @@
-<form action="" method="POST" class="u-hide u-js-show c-ratings-survey" data-ratings-survey="{{#if id}}{{id}}{{/if}}">
+<form action="" method="POST" class="u-hide u-js-show c-ratings-survey" data-ratings-survey="{{id}}">
 	<h{{headingLevel}} class="c-ratings-survey__heading">{{heading}}</h{{headingLevel}}>
 	{{#with globalFormData}}
 		{{> globalFormFieldset }}
