add srcset for swapping logo at certain width
- update demo

--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -5,6 +5,7 @@
 				<div class="c-header__logo-container">
 					<a href="{{logo.link}}">
 						<picture class="c-header__logo">
+							<source srcset="{{logo.srcset}}" media="(min-width: 875px)">
 							<img src="{{logo.src}}" alt="{{logo.alt}}" height="32">
 						</picture>
 					</a>
