--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -38,36 +38,34 @@
 	<div class="c-header__row">
 		<div class="c-header__container">
 			<div class="c-header__split">
-				<div class="c-header__split">
-					<ul class="c-header__menu c-header__menu--journal">
-						<li class="c-header__item c-header__item--dropdown-menu">
-							<a href="#explore" class="c-header__link" data-header-expander>
-								<span><span class="c-header__show-text">Explore</span> content</span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
-									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
-								</svg>
-							</a>
-						</li>
-						<li class="c-header__item c-header__item--dropdown-menu">
-							<a href="#about-the-journal" class="c-header__link" data-header-expander>
-								<span>About <span class="c-header__show-text">the journal</span></span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
-									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
-								</svg>
-							</a>
-						</li>
-						<li class="c-header__item c-header__item--dropdown-menu">
-							<a href="#publish-with-us" class="c-header__link c-header__link--dropdown-menu" data-header-expander>
-								<span>Publish <span class="c-header__show-text">with us</span></span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
-									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
-								</svg>
-							</a>
-						</li>
-					</ul>
-					<div class="c-header__item c-header__item--pipe c-header__item--hide-lg-max">
+				<ul class="c-header__menu c-header__menu--journal">
+					<li class="c-header__item c-header__item--dropdown-menu">
+						<a href="#explore" class="c-header__link" data-header-expander>
+							<span><span class="c-header__show-text">Explore</span> content</span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+								<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
+							</svg>
+						</a>
+					</li>
+					<li class="c-header__item c-header__item--dropdown-menu">
+						<a href="#about-the-journal" class="c-header__link" data-header-expander>
+							<span>About <span class="c-header__show-text">the journal</span></span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+								<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
+							</svg>
+						</a>
+					</li>
+					<li class="c-header__item c-header__item--dropdown-menu">
+						<a href="#publish-with-us" class="c-header__link c-header__link--dropdown-menu" data-header-expander>
+							<span>Publish <span class="c-header__show-text">with us</span></span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+								<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
+							</svg>
+						</a>
+					</li>
+					<li class="c-header__item c-header__item--pipe c-header__item--hide-lg-max">
 						<a class="c-header__link" href="https://www.nature.com/nature/subscribe">
 							<span>Subscribe</span>
 						</a>
-					</div>
-				</div>
+					</li>
+				</ul>
 				<ul class="c-header__menu c-header__menu--hide-lg-max">
 					<li class="c-header__item">
 						<a class="c-header__link" href="https://www.nature.com/my-account/alerts/subscribe-journal?list-id=1" rel="nofollow">
