Remove margin right on menu to inline menu items sooner as viewport gets wider

--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -73,7 +73,7 @@
 
 .c-header__menu--journal {
 	font-size: .875rem;
-	margin: spacing(8) spacing(8) spacing(8) (0 - spacing(8));
+	margin: spacing(8) 0 spacing(8) (0 - spacing(8));
 
 	@include media-query('sm') {
 		flex-wrap: nowrap;
